--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.5.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
